# cross-sectional-trees

./: .env.example  .envrc.example  .gitignore  AGENTS.md  README.md  data_providers.py  main.py  pyproject.toml  rqdata-python-hk-stock-manual.md
.githooks/: pre-commit  pre-push
.github/workflows/: tests.yml
artifacts/: README.md
artifacts/cache/: README.md
artifacts/metadata/: dataset_registry.csv
config/: cn.yml  config.cn.yml  config.hk.yml  config.us.yml  config.yml  default.yml  hk.yml  hk_backtest.yml  hk_connect__pit_quarterly_financial_ml.yml  hk_live.yml  hk_selected__baseline.yml  hk_selected__baseline_eval_sample.yml  hk_selected__baseline_eval_sample_ffill.yml  hk_selected__baseline_pit_file.yml  hk_selected__baseline_pit_quarterly.yml  hk_selected__elasticnet_a0.1_l0.5.yml  hk_selected__pit_quarterly_financial_linear.yml  hk_selected__pit_quarterly_financial_ml.yml  hk_selected__pit_quarterly_hybrid.yml  hk_selected__provider_quarterly_valuation.yml  hk_selected__ridge_a1.yml  hk_selected__xgb_ranker_pairwise.yml  hk_selected__xgb_regressor.yml  hk_selected_live.yml  universe.hk_connect.yml  us.yml
config/sweeps/: hk_selected__eval_sample.yml  hk_selected__eval_sample_ffill.yml  hk_selected__linear_a.yml  hk_selected__linear_b.yml  hk_selected__pit_quarterly_financial_linear.yml  hk_selected__pit_quarterly_linear.yml
configs/: __init__.py  catalog.csv
configs/experiments/: hk_selected__eval_sample_ffill.yml  hk_selected__pit_quarterly_linear.yml  template__quarterly_xgb_ranker.yml
configs/field_profiles/: hk_financial_fields_starter.txt
configs/local/: hk_selected__m_pit_core_hybrid_sidecar_industry_groupcap4_tr_close_exec_balanced.yml  hk_selected__m_pit_core_hybrid_sidecar_industry_observe_tr_close_exec_balanced.yml
configs/presets/: a_share.yml  cn.yml  default.yml  default_next.yml  hk.yml  hk_quarterly_pit_hybrid.yml  us.yml
csxgb/: backtest.py  cli.py  metrics.py  rebalance.py  transform.py
docs/: README.md  capabilities.md  cli.md  config.md  cookbook.md  dev.md  full_function.md  fundamental-analysis-via-machine-learning-digest.md  get-started.md  guan-random-forest-cross-sectional.txt  index.md  market-lifecycle.md  metrics.md  outputs.md  pipeline-overview.md  providers.md  rqdata-python-hk-stock-manual.md  troubleshooting.md
docs/concepts/: README.md  benchmark-protocol.md  data-sources.md  execution-costs.md  external-artifacts-root.md  model-landscape.md  model-selection.md  pit-coverage.md  shared-hk-data-platform.md  universe-modes.md
docs/internal/: README.md  cstree-namespace-migration.md  data-ops-boundary-inventory.md  feature-planning.md  full_function.md  hk-h12-w16-target-transform-review-20260324.md  maintenance-debt-inventory.md
docs/playbooks/: README.md  a-share-baseline.md  hk-data-assets.md  hk-intraday-assets.md  hk-rqdata-status.md  hk-selected.md  research-template-design.md
docs/research/: README.md  fundamental-analysis-via-machine-learning-digest.md  hk-h12-w16-target-transform-review-20260324.md  hk-quarterly-pit-regime-shift-202603.md  hk-quarterly-target-design-and-direction-20260324.md  predicting-future-earnings-changes-using-machine-learning.md
docs/rqdata/: README.md  a-share-data-reference.md  hk-health-checks.md  hk-stock-data-reference.md  python-hk-stock-manual.md  rqdata-python-cn-stock-manual.md
project_tools/: __init__.py  build_hk_connect_universe.py  combine_code.py  run_grid.py  verify_tushare_tokens.py
scripts/: README.md  analyze_hk_financial_details.py  audit_hk_selected_provider_valuation.py  combine_code.py  merge_hk_selected_provider_valuation_into_pit.py  package.sh  package_assets.py  package_runs.py  package_zip.sh  release_assets.py  release_runs.py  run_grid.py  run_tests.sh
scripts/dev/: check_c901_debt.py  data_ops_boundary.py  install_git_hooks.sh  maintainability_metrics.py  refresh_hk_current.sh  run_hk_data_asset_audit.sh  run_hk_health_checks.sh  run_hk_pit_health.sh  run_tests.sh  test_impact.py
scripts/internal/: export_repo_source.py  package_repo.sh  publish_hk_tick_depth_assets.py  run_hk_asset_workflow.py
scripts/release/: package_assets.py  package_runs.py  release_assets.py  release_runs.py
scripts/research/: audit_hk_selected_provider_valuation.py  merge_hk_selected_provider_valuation_into_pit.py
src/csml/: __init__.py  artifacts.py  backtest.py  cli.py  compat.py  config_utils.py  current_assets.py  data_interface.py  data_providers.py  dataset.py  date_utils.py  execution.py  exposure.py  metrics.py  modeling.py  pipeline.py  pipeline_data.py  pipeline_dates.py  pipeline_eval.py  pipeline_live.py  pipeline_support.py  portfolio.py  rqdata_runtime.py  split.py  transform.py
src/cstree/: __init__.py  _mdp_compat.py  artifacts.py  backtest.py  cli.py  compat.py  config_utils.py  current_assets.py  data_interface.py  data_provider_contracts.py  data_providers.py  dataset.py  date_utils.py  execution.py  execution_calendar.py  execution_sim.py  exposure.py  intraday_paths.py  metrics.py  modeling.py  pit_feature_stats.py  portfolio.py  repo_paths.py  rqdata_runtime.py  split.py
src/csxgb/: __init__.py  (+7 more)
tests/: _pipeline_test_utils.py  conftest.py  test_a_share_tushare_pipeline.py  test_alloc.py  test_alloc_hk.py  test_artifacts.py  test_asset_release_scripts.py  test_audit_provider_valuation.py  test_backtest.py  test_backtest_reporting.py  test_backtest_tearsheet.py  test_backup_data.py  test_benchmark_ladder.py  test_c901_debt_check.py  test_cli.py  test_cli_core.py  test_cli_entrypoints.py  test_cli_liveops.py  test_cli_research.py  test_cli_rqdata.py  test_config_utils.py  test_construction_grid.py  test_cpcv.py  test_cstree_namespace.py  test_data_interface.py  test_data_ops_boundary.py  test_data_providers_cache.py  test_data_warehouse.py  test_dev_test_impact.py  test_docs_contracts.py  test_execution.py  test_execution_calendar.py  test_execution_sim.py  test_export_repo_source.py  test_export_targets.py  test_feature_evidence.py  test_fundamentals_providers.py  test_git_hooks.py  test_hk_asset_patch_merge.py  test_hk_asset_workflow.py  (+61 more)
(+450 files in other folders)
