[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-sectional-hk-trees"
version = "1.0.0"
description = "Hong Kong cross-sectional tree-model research with linear benchmarks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "pandas-ta>=0.3.14b0",
  "pyarrow>=12.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "scikit-learn>=1.2",
  "xgboost>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov",
  "ruff>=0.8",
]
duckdb = [
  "duckdb>=1.2",
]
liveops-hk = [
  "openpyxl>=3.1",
]
rqdata = [
  "rqdatac>=3.4.3",
  "rqdatac-hk",
  "rqsdk",
]
stats = [
  "scipy>=1.10",
]

[project.scripts]
cstree = "cstree.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1 --strict-markers"
markers = [
  "integration: cross-module end-to-end tests",
  "slow: heavier offline regression tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  ".venv",
  "artifacts",
  "build",
  "configs/local",
  "dist",
]

[tool.ruff.lint]
select = ["E9", "F821", "F822", "F823", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# Existing large orchestration modules are being split incrementally.
"src/cstree/backtest.py" = ["C901"]
"src/cstree/commands/linear_sweep.py" = ["C901"]
"src/cstree/commands/run_grid.py" = ["C901"]
"src/cstree/commands/tune.py" = ["C901"]
"src/cstree/data_providers.py" = ["C901"]
"src/cstree/data_tools/build_hk_connect_universe.py" = ["C901"]
"src/cstree/data_tools/rqdata_assets/args.py" = ["C901"]
"src/cstree/data_tools/rqdata_assets/asset_health.py" = ["C901"]
"src/cstree/data_tools/rqdata_assets/build.py" = ["C901"]
"src/cstree/data_tools/rqdata_assets/clean_daily.py" = ["C901"]
"src/cstree/data_tools/rqdata_assets/coverage.py" = ["C901"]
"src/cstree/data_tools/rqdata_assets/intraday_asset.py" = ["C901"]
"src/cstree/data_tools/rqdata_assets/intraday_health.py" = ["C901"]
"src/cstree/data_tools/rqdata_assets/mirror_daily.py" = ["C901"]
"src/cstree/data_tools/rqdata_assets/mirror_financial.py" = ["C901"]
"src/cstree/data_tools/rqdata_assets/mirror_industry_changes.py" = ["C901"]
"src/cstree/data_tools/rqdata_assets/mirror_industry_southbound.py" = ["C901"]
"src/cstree/data_tools/rqdata_assets/mirror_instrument_industry.py" = ["C901"]
"src/cstree/data_tools/rqdata_assets/mirror_workflow.py" = ["C901"]
"src/cstree/liveops/alloc_core.py" = ["C901"]
"src/cstree/liveops/alloc_hk_allocation.py" = ["C901"]
"src/cstree/liveops/holdings.py" = ["C901"]
"src/cstree/pipeline/config.py" = ["C901"]
"src/cstree/pipeline/config_eval.py" = ["C901"]
"src/cstree/pipeline/eval.py" = ["C901"]
"src/cstree/pipeline/feature_engineering.py" = ["C901"]
"src/cstree/pipeline/output_artifacts.py" = ["C901"]
"src/cstree/pipeline/panel_loader.py" = ["C901"]
"src/cstree/pipeline/preflight.py" = ["C901"]
"src/cstree/pipeline/train_eval_stage.py" = ["C901"]
"src/cstree/portfolio.py" = ["C901"]
"src/cstree/release_tools/hk_asset_workflow.py" = ["C901"]
"src/cstree/release_tools/package_assets.py" = ["C901"]
"src/cstree/release_tools/release_assets.py" = ["C901"]
"src/cstree/split.py" = ["C901"]

[tool.uv]
# `rqsdk` still imports `pkg_resources` from its sdist build step.
# Setuptools removed `pkg_resources` in v82, so constrain build-time
# setuptools until upstream fixes its packaging metadata.
build-constraint-dependencies = ["setuptools<82"]

[tool.uv.extra-build-dependencies]
rqsdk = ["setuptools"]
rqdatac-fund = ["setuptools"]
