[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-sectional-trees"
version = "1.0.0"
description = "Hong Kong cross-sectional tree-model research with linear benchmarks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "market-data-platform>=0.1.0",
  "numpy>=1.23",
  "pandas>=2.0",
  "pandas-ta>=0.3.14b0",
  "pyarrow>=12.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "scikit-learn>=1.2",
  "xgboost>=1.7",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1.390",
  "pytest>=7.4",
  "pytest-cov",
  "ruff>=0.8",
]
duckdb = [
  "duckdb>=1.2",
]
liveops-hk = [
  "openpyxl>=3.1",
]
rqdata = [
  "rqdatac>=3.4.3",
  "rqdatac-hk",
  "rqsdk",
]
stats = [
  "scipy>=1.10",
]

[project.scripts]
cstree = "cstree.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1 --strict-markers"
markers = [
  "integration: cross-module end-to-end tests",
  "slow: heavier offline regression tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  ".venv",
  "artifacts",
  "build",
  "configs/local",
  "dist",
]

[tool.ruff.lint]
select = ["E9", "F401", "F821", "F822", "F823", "F841", "I001", "B905", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# Existing large orchestration modules are being split incrementally.
"src/cstree/commands/linear_sweep.py" = ["C901"]
"src/cstree/commands/run_grid.py" = ["C901"]
"src/cstree/commands/tune.py" = ["C901"]
"src/cstree/liveops/alloc_hk_allocation.py" = ["C901"]
"src/cstree/liveops/holdings.py" = ["C901"]
"src/cstree/pipeline/config_eval.py" = ["C901"]
"src/cstree/pipeline/feature_engineering.py" = ["C901"]
"src/cstree/pipeline/preflight.py" = ["C901"]
"src/cstree/portfolio.py" = ["C901"]

[tool.uv]
# `rqsdk` still imports `pkg_resources` from its sdist build step.
# Setuptools removed `pkg_resources` in v82, so constrain build-time
# setuptools until upstream fixes its packaging metadata.
build-constraint-dependencies = ["setuptools<82"]

[tool.uv.sources]
market-data-platform = { path = "../market-data-platform", editable = true }

[tool.uv.extra-build-dependencies]
rqsdk = ["setuptools"]
rqdatac-fund = ["setuptools"]

[tool.pyright]
include = [
  "src/cstree/pipeline/contracts.py",
  "src/cstree/pipeline/output_context.py",
  "src/cstree/liveops/export_targets.py",
]
exclude = [
  ".venv",
  "artifacts",
  "build",
  "configs/local",
  "dist",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
